modifaction des formulaires

--- a/css/styleAdresse.css
+++ b/css/styleAdresse.css
@@ -64,11 +64,17 @@ table{
 p{
     size: 4;
 }
+fieldset{
+    background-color: white;
+    border : whitesmoke;
+}
+input:hover{
+    border: 1px solid yellow;
+}
 input:required {
     border: 1px solid red;
     symbols: element();
   }
-  
-  input:valid {
-    border: 1px solid blue;
-  }
+textarea:hover{
+    border: 1px solid yellow;
+}
