--- a/css/styleAdresse.css
+++ b/css/styleAdresse.css
@@ -68,12 +68,12 @@ fieldset{
     background-color: white;
     border : whitesmoke;
 }
+input{
+    border: 1px solid black;
+}
 input:hover{
     border: 1px solid yellow;
 }
-input:required {
-    border: 1px solid red;
-    symbols: element();
   }
 textarea:hover{
     border: 1px solid yellow;
